# sythoria-desktop

./: .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  diff.txt  eslint.config.js  index.html  message.txt  package-lock.json  package.json  test.txt  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.ts
src/: App.css  App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  appshots.rs  git.rs  lib.rs  main.rs  project.rs  project_tools.rs  skills.rs  stream_parser.rs  ws_handler.rs
src-tauri/src/commands/: audio.rs  config.rs  mcp.rs  mod.rs
src-tauri/src/mcp/: client.rs  mod.rs
src-tauri/src/search/: custom.rs  firecrawl.rs  google.rs  jina.rs  mod.rs  searxng.rs
src/.opencode/: todo.md
src/components/: AuthScreen.tsx  AuxiliaryPanel.test.tsx  AuxiliaryPanel.tsx  ChatArea.test.tsx  ChatArea.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ComparisonColumn.tsx  GenerationActivity.tsx  InputBar.test.tsx  InputBar.tsx  LinkWarningModal.tsx  ProjectConfigModal.tsx  ResponseSettingsSelector.test.tsx  ResponseSettingsSelector.tsx  ScrollToBottomButton.tsx  Settings.tsx  Sidebar.tsx  SpotlightArea.tsx  StartScreen.tsx  TitleBar.tsx  auxiliaryPanelUtils.test.ts  auxiliaryPanelUtils.ts
src/components/settings/: index.tsx  types.ts
src/components/settings/components/: ColorPickerInput.tsx  EnvVarsEditor.tsx  FetchApiCard.tsx  McpServerCard.tsx  ModelCard.test.tsx  ModelCard.tsx  SearchApiCard.tsx
src/components/settings/sections/: AppearanceSection.tsx  AppshotsSection.tsx  BrowserSection.tsx  ConfigurationSection.tsx  GeneralSection.tsx  GitSection.tsx  KeybindsSection.tsx  LogsSection.tsx  MarketplaceSection.tsx  McpSection.tsx  ModelsSection.tsx  PersonalizationSection.tsx  PrivacySection.tsx  ProjectsSection.tsx  SkillsSection.tsx  WhisperSection.tsx
src/components/ui/: DragOverlay.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FakeTrafficLights.tsx  ImagePreviewModal.tsx  Modal.test.tsx  Modal.tsx  MotionButton.tsx  QuestionCard.tsx  Select.test.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Switch.test.tsx  Switch.tsx  Toast.test.tsx  Toast.tsx
src/config/: constants.test.ts  constants.ts  fetchPresets.ts  marketplaceThemes.ts  mcpPresets.ts  providerPresets.ts  searchPresets.ts  themePresets.ts  whisperPresets.ts
src/contexts/: ChatContext.tsx  ConnectionContext.tsx  UIContext.tsx
src/hooks/: use-safe-motion.ts  useAttachments.ts  useDebounce.ts  useScrollPosition.ts  useScrollTracking.ts  useWebSocket.ts
src/lib/: motion-tokens.ts
src/services/: toolLoop.test.ts  toolLoop.ts
src/store/: helpers.ts  index.ts  useAppStore.ts  useAppshotStore.test.ts  useAppshotStore.ts  useChatStore.compare.test.ts  useChatStore.ts  useGitStore.ts  useKeybindStore.test.ts  useKeybindStore.ts  useMcpStore.ts  useModelStore.test.ts  useModelStore.ts  useProjectStore.ts  useSearchStore.ts  useSkillStore.ts  useUIStore.ts  useWhisperStore.ts
src/types/: index.ts  log.ts
src/utils/: attachments.test.ts  attachments.ts  debounce.ts  externalUrl.test.ts  externalUrl.ts  generateId.test.ts  generateId.ts  highlighter.test.ts  highlighter.ts  i18n.ts  logger.ts  messageParser.ts  parseApiError.ts  scrollLock.ts  storage.conversation.test.ts  storage.mcp.test.ts  storage.ts  thinking.test.ts  thinking.ts  tokens.ts  validation.test.ts  validation.ts
src/utils/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  zh.ts
