[package]
name = "sythoria"
version = "0.1.0"
description = "Desktop UI for LLMs"
authors = ["xNOTHINGx", "DenysHandziichuk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sythoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
futures-util = "0.3"
tokio-tungstenite = "0.29"
url = "2"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2.8.0"
thiserror = "2"
urlencoding = "2"
html-escape = "0.2"
scraper = "0.27.0"
ego-tree = "0.11"
log = "0.4.30"
keyring = "3.6.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
