[package]
name = "sythoria"
version = "0.1.0"
description = "Desktop UI for LLMs"
authors = ["xNOTHINGx", "DenysHandziichuk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sythoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tokio-tungstenite = "0.29"
url = "2"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-autostart = "2"
thiserror = "2"
urlencoding = "2"
html-escape = "0.2"
scraper = "0.27.0"
ego-tree = "0.11"
log = "0.4.31"
keyring-core = "1"
rmcp = { version = "1", features = ["client", "transport-child-process", "client-side-sse", "transport-streamable-http-client-reqwest"] }
which = "8.0.4"
window-vibrancy = "0.6.0"
base64 = "0.22"
xcap = "0.9.6"
image = "0.25.10"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }
smappservice-rs = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
